--- a/Ejercicios/ejercicio06/css/01.css
+++ b/Ejercicios/ejercicio06/css/01.css
@@ -5,23 +5,24 @@ body {
 #contenedor {
   width: 100%;
 }
+#contenedor > * {
+  float: left;
+}
 header {
   background-color: black;
   color: white;
-  height: 80px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  width: 100%;
+  text-align: center;
 }
-header h1 {
-  margin: 0;
+h1 {
   text-shadow: 0px 0px 5px white;
 }
 main {
-  width: 70%;
-  margin: 0 auto;
+  width: 100%;
+  padding: 0 20%;
+  box-sizing: border-box;
 }
-main h2 {
+h2 {
   text-shadow: 0px 0px 3px grey;
   text-align: center;
 }
@@ -30,7 +31,7 @@ footer {
   width: 100%;
   text-align: center;
 }
-footer p {
-  margin: 0;
+
+footer small {
   color: white;
 }
